--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
   },
